# pipeline-devsecops-docker-gitea

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SETUP_GITHUB.md  app.py  config.py  demo-script.md  docker-compose.yml  docker-compose.yml.bak  pyproject.toml  requirements.txt  run.py  setup-dev.sh  wsgi.py
.github/workflows/: ci-cd.yml
app/: __init__.py  models.py  wsgi.py
app/api/: __init__.py
app/auth/: __init__.py
app/health/: __init__.py
app/utils/: __init__.py
db/: init.sql
monitoring/prometheus/: prometheus.yml
templates/: index.html
tests/: test_app.py
traefik/config/: traefik.yml
